--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,48 +1,38 @@
-
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-
+@import url("https://fonts.googleapis.com/css?family=Raleway");
 html, body {
-    font-family: 'Raleway', sans-serif;
-    font-size: 20px;
-    text-align: center;
-
-    min-height: 100%;
-
-    background: #ddd6f3; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #ddd6f3 , #faaca8); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #ddd6f3 , #faaca8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  min-height: 100%;
+  background: #ddd6f3;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #ddd6f3, #faaca8);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #ddd6f3, #faaca8);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 .container {
-    min-height: 100%;
-
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-
-    align-items: center;
-    justify-content: center;
-}
-
-.hero {
-    max-width: 66%;
-}
-
-.container header h1 {
-    color: white;
-    margin-bottom: 45px;
-}
-
-.container .hero #app form input[type="text"] {
-    font-size: 1rem;
-    line-height: 4rem;
-    letter-spacing: .125rem;
-
-    background: transparent;
-    outline: 0;
-    border: 0;
-}
+  min-height: 100%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  align-items: center;
+  justify-content: center; }
+  .container .hero {
+    max-width: 66%; }
+  .container header h1 {
+    color: white; }
+  .container #app {
+    color: #444; }
+    .container #app form input {
+      font-size: 1rem;
+      line-height: 2.5rem;
+      letter-spacing: .125rem;
+      text-align: center;
+      background: transparent;
+      outline: 0;
+      border: 0;
+      border-bottom: 1px solid #fff; }
