--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway");
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
 html, body {
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
@@ -21,8 +26,6 @@ html, body {
   -webkit-box-align: center;
   align-items: center;
   justify-content: center; }
-  .container .hero {
-    max-width: 66%; }
   .container header h1 {
     color: white; }
   .container #app {
@@ -36,3 +39,16 @@ html, body {
       outline: 0;
       border: 0;
       border-bottom: 1px solid #fff; }
+    .container #app .accuracyDisplay {
+      margin-top: 40px;
+      display: flex;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      -webkit-box-align: center;
+      justify-content: space-around; }
+      .container #app .accuracyDisplay .box {
+        height: 20px;
+        width: 20px;
+        background-color: #666; }
