--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html, body {
     font-family: 'Raleway', sans-serif;
     font-size: 20px;
@@ -28,7 +34,6 @@ html, body {
     justify-content: center;
 
     .hero {
-        max-width: 66%;
     }
 
     header {
@@ -50,6 +55,26 @@ html, body {
             outline: 0;
             border: 0;
             border-bottom: 1px solid #fff;
+        }
+
+        .accuracyDisplay {
+            margin-top: 40px;
+
+            display: flex;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            -webkit-box-align: center;
+
+            justify-content: space-around;
+
+            .box {
+                height: 20px;
+                width: 20px;
+                background-color: #666;
+            }
         }
 
     }
