--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,7 +73,15 @@ html, body {
             .box {
                 height: 20px;
                 width: 20px;
-                background-color: #666;
+                background-color: #444;
+
+                &-success {
+                    background-color: #22FFBB; 
+                }
+
+                &-fail {
+                    background-color: #FF5888;
+                }
             }
         }
 
