adds misc effects

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,9 @@ html, body {
   .container header h1 {
     color: white; }
   .container #app {
-    color: #444; }
+    color: #333; }
+    .container #app .interface {
+      margin: 1rem 0 1.5rem; }
     .container #app form input {
       font-size: 1rem;
       line-height: 2.5rem;
@@ -40,7 +42,7 @@ html, body {
       border: 0;
       border-bottom: 1px solid #fff; }
     .container #app .accuracyDisplay {
-      margin-top: 40px;
+      min-height: 60px;
       display: flex;
       display: -ms-flexbox;
       display: -webkit-flex;
@@ -51,8 +53,23 @@ html, body {
       .container #app .accuracyDisplay .box {
         height: 20px;
         width: 20px;
-        background-color: #444; }
+        background-color: #666;
+        border: 1px solid #666;
+        -webkit-transition: background-color 0.25s;
+        transition: background-color 0.25s; }
         .container #app .accuracyDisplay .box-success {
           background-color: #22FFBB; }
         .container #app .accuracyDisplay .box-fail {
-          background-color: #FF5888; }
+          background-color: #FF5888;
+          -webkit-animation: grow 0.25s ease;
+          animation: grow 0.25s ease;
+          -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1; }
+
+@-webkit-keyframes grow {
+  50% {
+    height: 24px;
+    width: 24px; }
+  100% {
+    height: 20px;
+    width: 20px; } }
