--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,12 +64,12 @@ html, body {
           -webkit-animation: grow 0.25s ease;
           animation: grow 0.25s ease;
           -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1; }
+          animation-iteration-count: 1;
+          transform: scale(1); }
 
 @-webkit-keyframes grow {
   50% {
-    height: 24px;
-    width: 24px; }
+    -webkit-transform: scale(1.4);
+    transform: scale(1.4); }
   100% {
-    height: 20px;
-    width: 20px; } }
+    transform: scale(1); } }
