--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,6 +61,10 @@ html, body {
             border-bottom: 1px solid #fff;
         }
 
+        .banner {
+            min-height: 24px; 
+        }
+
         .accuracyDisplay {
             min-height: 60px;
 
