--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@ html, body {
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #ddd6f3, #faaca8);
   /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(right, #ddd6f3, #faaca8);
   background: linear-gradient(to left, #ddd6f3, #faaca8);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
@@ -20,12 +21,16 @@ html, body {
   min-height: 100%;
   display: -ms-flexbox;
   display: -webkit-flex;
+  display: -webkit-box;
   display: flex;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
   -webkit-box-align: center;
-  align-items: center;
-  justify-content: center; }
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .container header h1 {
     color: white; }
   .container #app {
@@ -45,33 +50,55 @@ html, body {
       min-height: 24px; }
     .container #app .accuracyDisplay {
       min-height: 60px;
+      display: -webkit-box;
       display: flex;
       display: -ms-flexbox;
       display: -webkit-flex;
-      -ms-flex-align: center;
-      -webkit-align-items: center;
-      -webkit-box-align: center;
-      justify-content: space-around; }
+      -webkit-justify-content: space-around;
+          -ms-flex-pack: distribute;
+              justify-content: space-around; }
       .container #app .accuracyDisplay .box {
         height: 20px;
         width: 20px;
-        background-color: #666;
         border: 1px solid #666;
         -webkit-transition: background-color 0.25s;
         transition: background-color 0.25s; }
+        .container #app .accuracyDisplay .box-initial-neutral {
+          background-color: #666; }
         .container #app .accuracyDisplay .box-success {
           background-color: #22FFBB; }
         .container #app .accuracyDisplay .box-fail {
           background-color: #FF5888;
-          -webkit-animation: grow 0.25s ease;
-          animation: grow 0.25s ease;
+          -webkit-animation: grow 500ms ease;
+                  animation: grow 500ms ease;
           -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
-          transform: scale(1); }
+                  animation-iteration-count: 1;
+          -webkit-transform: scale(1);
+                  transform: scale(1); }
 
+/* used during keypress animation neutral -> fail */
 @-webkit-keyframes grow {
+  25%, 75% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2); }
   50% {
     -webkit-transform: scale(1.4);
     transform: scale(1.4); }
   100% {
-    transform: scale(1); } }
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+
+/* keypress animation, fail or success -> neutral */
+@-webkit-keyframes shake {
+  10%, 90% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0); }
+  20%, 80% {
+    -webkit-transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0); }
+  30%, 50%, 70% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0); }
+  40%, 60% {
+    -webkit-transform: translate3d(4px, 0, 0);
+            transform: translate3d(4px, 0, 0); } }
