--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,10 +26,6 @@ html, body {
     display: -webkit-flex;
     display: flex;
 
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-
     align-items: center;
     justify-content: center;
 
@@ -72,24 +68,18 @@ html, body {
             display: -ms-flexbox;
             display: -webkit-flex;
 
-            -ms-flex-align: center;
-            -webkit-align-items: center;
-            -webkit-box-align: center;
-
             justify-content: space-around;
 
             .box {
                 height: 20px;
                 width: 20px;
-                background-color: #666;
 
                 border: 1px solid #666;
 
-                -webkit-transition: background-color 0.25s;
                 transition: background-color 0.25s;
 
-                &--neutral {
-                    
+                &-initial-neutral {
+                    background-color: #666;
                 }
 
                 &-success {
@@ -98,9 +88,7 @@ html, body {
 
                 &-fail {
                     background-color: #FF5888;
-                    -webkit-animation: grow 0.25s ease;
-                    animation: grow 0.25s ease;
-                    -webkit-animation-iteration-count: 1;
+                    animation: grow 500ms ease;
                     animation-iteration-count: 1;
                     transform: scale(1);
                 }
@@ -109,7 +97,14 @@ html, body {
     }
 }
 
+/* used during keypress animation neutral -> fail */
 @-webkit-keyframes grow {
+
+    25%, 75% {
+      -webkit-transform: scale(1.2);
+      transform: scale(1.2);
+    }
+
     50% {
       -webkit-transform: scale(1.4);
       transform: scale(1.4);
@@ -118,4 +113,23 @@ html, body {
     100% {
       transform: scale(1);
     }
+}
+
+/* keypress animation, fail or success -> neutral */
+@-webkit-keyframes shake {
+10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
