--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,8 +69,10 @@ html, body {
           background-color: #22FFBB; }
         .container #app .accuracyDisplay .box-fail {
           background-color: #FF5888;
-          -webkit-animation: grow 500ms ease;
-                  animation: grow 500ms ease;
+          -webkit-animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+                  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+          -webkit-transform: translate3d(0, 0, 0);
+                  transform: translate3d(0, 0, 0);
           -webkit-animation-iteration-count: 1;
                   animation-iteration-count: 1;
           -webkit-transform: scale(1);
