--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,7 +88,8 @@ html, body {
 
                 &-fail {
                     background-color: #FF5888;
-                    animation: grow 500ms ease;
+                    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+                    transform: translate3d(0, 0, 0);
                     animation-iteration-count: 1;
                     transform: scale(1);
                 }
