--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,7 +61,7 @@ html, body {
             min-height: 24px; 
         }
 
-        .accuracyDisplay {
+        .accuracy-display {
             min-height: 60px;
 
             display: flex;
