--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,12 @@ html, body {
                   animation-iteration-count: 1;
           -webkit-transform: scale(1);
                   transform: scale(1); }
+    .container #app .history-display {
+      min-height: 200px;
+      max-height: 200px; }
+      .container #app .history-display .accuracy-display .box {
+        -webkit-animation: initial;
+                animation: initial; }
 
 /* used during keypress animation neutral -> fail */
 @-webkit-keyframes grow {
