--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway");
+@font-face {
+  font-family: 'dotsfont';
+  src: url("fonts/dotsfont.eot");
+  src: url("fonts/dotsfont.eot?#iefix") format("embedded-opentype"), url("fonts/dotsfont.woff") format("woff"), url("fonts/dotsfont.ttf") format("truetype"), url("fonts/dotsfont.svg#dotsfontregular") format("svg"); }
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -31,6 +36,19 @@ html, body {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center; }
+  .container .hero {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
   .container header h1 {
     color: white; }
   .container #app {
@@ -38,6 +56,7 @@ html, body {
     .container #app .interface {
       margin: 2.5rem 0 1.25rem; }
     .container #app form input {
+      font-family: 'dotsfont';
       font-size: 1rem;
       line-height: 2.5rem;
       letter-spacing: .125rem;
@@ -79,7 +98,8 @@ html, body {
                   transform: scale(1); }
     .container #app .history-display {
       min-height: 200px;
-      max-height: 200px; }
+      max-height: 200px;
+      overflow: hidden; }
       .container #app .history-display .accuracy-display .box {
         -webkit-animation: initial;
                 animation: initial; }
