--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ html, body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  min-height: 100%;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
