--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,6 +53,7 @@ html, body {
 
     form input {
       font-family: 'dotsfont';
+      color: #333;
 
       font-size: 1rem;
       line-height: 2.5rem;
@@ -87,7 +88,7 @@ html, body {
         transition: background-color 0.25s;
 
         &-initial-neutral {
-          background-color: #666;
+          background-color: #444;
         }
 
         &-success {
