preps for build 1.0

--- a/css/main.css
+++ b/css/main.css
@@ -1,120 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway");
-@font-face {
-  font-family: 'dotsfont';
-  src: url("fonts/dotsfont.eot");
-  src: url("fonts/dotsfont.eot?#iefix") format("embedded-opentype"), url("fonts/dotsfont.woff") format("woff"), url("fonts/dotsfont.ttf") format("truetype"), url("fonts/dotsfont.svg#dotsfontregular") format("svg"); }
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
-
-html, body {
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px;
-  text-align: center;
-  height: 100%;
-  background: #ddd6f3;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #ddd6f3, #faaca8);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(right, #ddd6f3, #faaca8);
-  background: linear-gradient(to left, #ddd6f3, #faaca8);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
-
-.container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 100%;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-  .container header h1 {
-    color: white; }
-  .container #app {
-    color: #333; }
-    .container #app .interface {
-      margin: 2.5rem 0 1.25rem; }
-    .container #app form input {
-      font-family: 'dotsfont';
-      color: #333;
-      font-size: 1rem;
-      line-height: 2.5rem;
-      letter-spacing: .125rem;
-      text-align: center;
-      background: transparent;
-      outline: 0;
-      border: 0;
-      border-bottom: 1px solid #fff; }
-    .container #app .banner {
-      min-height: 24px; }
-    .container #app .accuracy-display {
-      min-height: 58px;
-      display: -webkit-box;
-      display: flex;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      -webkit-justify-content: space-around;
-          -ms-flex-pack: distribute;
-              justify-content: space-around; }
-      .container #app .accuracy-display .box {
-        height: 20px;
-        width: 20px;
-        border: 1px solid #666;
-        -webkit-transition: background-color 0.25s;
-        transition: background-color 0.25s; }
-        .container #app .accuracy-display .box-initial-neutral {
-          background-color: #444; }
-        .container #app .accuracy-display .box-success {
-          background-color: #22FFBB; }
-        .container #app .accuracy-display .box-fail {
-          background-color: #FF5888;
-          -webkit-animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-                  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-          -webkit-transform: translate3d(0, 0, 0);
-                  transform: translate3d(0, 0, 0);
-          -webkit-animation-iteration-count: 1;
-                  animation-iteration-count: 1;
-          -webkit-transform: scale(1);
-                  transform: scale(1); }
-    .container #app .history-display {
-      min-height: 200px;
-      max-height: 200px;
-      overflow: hidden; }
-      .container #app .history-display .accuracy-display .box {
-        -webkit-animation: initial;
-                animation: initial; }
-
-/* used during keypress animation neutral -> fail */
-@-webkit-keyframes grow {
-  25%, 75% {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2); }
-  50% {
-    -webkit-transform: scale(1.4);
-    transform: scale(1.4); }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1); } }
-
-/* keypress animation, fail or success -> neutral */
-@-webkit-keyframes shake {
-  10%, 90% {
-    -webkit-transform: translate3d(-1px, 0, 0);
-            transform: translate3d(-1px, 0, 0); }
-  20%, 80% {
-    -webkit-transform: translate3d(2px, 0, 0);
-            transform: translate3d(2px, 0, 0); }
-  30%, 50%, 70% {
-    -webkit-transform: translate3d(-4px, 0, 0);
-            transform: translate3d(-4px, 0, 0); }
-  40%, 60% {
-    -webkit-transform: translate3d(4px, 0, 0);
-            transform: translate3d(4px, 0, 0); } }
+@font-face{font-family:Raleway;font-style:normal;font-weight:400;src:local('Raleway'),local('Raleway-Regular'),url(https://fonts.gstatic.com/s/raleway/v11/bIcY3_3JNqUVRAQQRNVteQ.ttf) format('truetype')}@font-face{font-family:dotsfont;src:url(fonts/dotsfont.eot);src:url(fonts/dotsfont.eot?#iefix) format("embedded-opentype"),url(fonts/dotsfont.woff) format("woff"),url(fonts/dotsfont.ttf) format("truetype"),url(fonts/dotsfont.svg#dotsfontregular) format("svg")}*{box-sizing:border-box;margin:0;padding:0}body,html{font-family:Raleway,sans-serif;font-size:20px;text-align:center;height:100%;background:#ddd6f3;background:-webkit-linear-gradient(right,#ddd6f3,#faaca8);background:linear-gradient(to left,#ddd6f3,#faaca8)}.container{display:-webkit-box;display:-ms-flexbox;display:flex;min-height:100%;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.container header h1{color:#fff}.container #app{color:#333}.container #app .interface{margin:2.5rem 0 1.25rem}.container #app form input{font-family:dotsfont;color:#333;font-size:1rem;line-height:2.5rem;letter-spacing:.125rem;text-align:center;background:0 0;outline:0;border:0;border-bottom:1px solid #fff}.container #app .banner{min-height:24px}.container #app .accuracy-display{min-height:58px;display:-webkit-box;display:flex;display:-ms-flexbox;display:-webkit-flex;-ms-flex-pack:distribute;justify-content:space-around}.container #app .accuracy-display .box{height:20px;width:20px;border:1px solid #666;-webkit-transition:background-color .25s;transition:background-color .25s}.container #app .accuracy-display .box-initial-neutral{background-color:#444}.container #app .accuracy-display .box-success{background-color:#2FB}.container #app .accuracy-display .box-fail{background-color:#FF5888;-webkit-animation:shake .82s cubic-bezier(.36,.07,.19,.97) both;animation:shake .82s cubic-bezier(.36,.07,.19,.97) both;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-webkit-animation-iteration-count:1;animation-iteration-count:1;-webkit-transform:scale(1);transform:scale(1)}.container #app .history-display{min-height:200px;max-height:200px;overflow:hidden}.container #app .history-display .accuracy-display .box{-webkit-animation:initial;animation:initial}@-webkit-keyframes grow{25%,75%{-webkit-transform:scale(1.2);transform:scale(1.2)}50%{-webkit-transform:scale(1.4);transform:scale(1.4)}100%{-webkit-transform:scale(1);transform:scale(1)}}@-webkit-keyframes shake{10%,90%{-webkit-transform:translate3d(-1px,0,0);transform:translate3d(-1px,0,0)}20%,80%{-webkit-transform:translate3d(2px,0,0);transform:translate3d(2px,0,0)}30%,50%,70%{-webkit-transform:translate3d(-4px,0,0);transform:translate3d(-4px,0,0)}40%,60%{-webkit-transform:translate3d(4px,0,0);transform:translate3d(4px,0,0)}}
