--- a/css/main.css
+++ b/css/main.css
@@ -24,21 +24,23 @@ html, body {
 
 .container {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-flow: column wrap;
+      flex-flow: column wrap;
   min-height: 100%;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center; }
   .container header h1 {
     color: white; }
   .container #app {
+    width: 80%;
     color: #333; }
     .container #app .interface {
       margin: 2.5rem 0 1.25rem; }
@@ -58,12 +60,14 @@ html, body {
     .container #app .accuracy-display {
       min-height: 58px;
       display: -webkit-box;
-      display: flex;
       display: -ms-flexbox;
-      display: -webkit-flex;
-      -webkit-justify-content: space-around;
-          -ms-flex-pack: distribute;
-              justify-content: space-around; }
+      display: flex;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+      -ms-flex-line-pack: center;
+          align-content: center;
+      -ms-flex-pack: distribute;
+          justify-content: space-around; }
       .container #app .accuracy-display .box {
         height: 20px;
         width: 20px;
@@ -91,6 +95,18 @@ html, body {
       .container #app .history-display .accuracy-display .box {
         -webkit-animation: initial;
                 animation: initial; }
+  .container footer {
+    width: 100%;
+    margin-top: 20px;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .container footer p {
+      font-size: 0.75rem; }
 
 /* used during keypress animation neutral -> fail */
 @-webkit-keyframes grow {
