--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,15 @@ html, body {
           justify-content: center; }
   .container header h1 {
     color: white; }
+  .container header .tooltip-help {
+    font-size: 0.6rem;
+    color: #0000FF;
+    text-decoration: underline; }
   .container #app {
     width: 80%;
     color: #333; }
     .container #app .interface {
-      margin: 2.5rem 0 1.25rem; }
+      margin: 2rem 0 1.25rem; }
     .container #app form input {
       font-family: 'dotsfont';
       color: #333;
@@ -56,7 +60,9 @@ html, body {
       border: 0;
       border-bottom: 1px solid #fff; }
     .container #app .banner {
-      min-height: 24px; }
+      padding: 10px;
+      min-height: 24px;
+      font-size: 18px; }
     .container #app .accuracy-display {
       min-height: 58px;
       display: -webkit-box;
@@ -97,7 +103,7 @@ html, body {
                 animation: initial; }
   .container footer {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 1.8rem;
     -ms-flex-item-align: end;
         align-self: flex-end;
     -ms-flex-line-pack: center;
