--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,700");
 @font-face {
   font-family: 'dotsfont';
   src: url("fonts/dotsfont.eot");
@@ -113,6 +113,46 @@ html, body {
             justify-content: center; }
     .container footer p {
       font-size: 0.75rem; }
+  .container.faq {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .container.faq h1 {
+      margin: 0; }
+    .container.faq nav {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+      .container.faq nav ul {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        list-style-type: none; }
+        .container.faq nav ul li {
+          padding: 0.75rem 1rem 1.5rem;
+          font-size: 0.75rem; }
+    .container.faq article {
+      margin: 1.5rem 0;
+      text-align: left; }
+      .container.faq article h2 {
+        text-align: center;
+        margin-bottom: 1rem;
+        text-decoration: underline; }
+      .container.faq article h3 {
+        padding-bottom: 0.75rem;
+        font-size: 1rem;
+        font-weight: 700; }
+        .container.faq article h3:not(first-child) {
+          padding: 0.25rem 0; }
+      .container.faq article p {
+        width: 50%;
+        margin: 0 auto; }
+      .container.faq article ul {
+        list-style-type: none;
+        margin-bottom: 0.75rem; }
 
 /* used during keypress animation neutral -> fail */
 @-webkit-keyframes grow {
